lintian (2.5.28) UNRELEASED; urgency=medium

  XXX: generate tag summary with private/generate-tag-summary

  * checks/*:
    + [NT] Remove all uses of "control", "debfiles" and
      "unpacked".
  * checks/*:
    + [NT] Remove all uses of the "doc-base-files", "init.d"
      and "menu-files" collections.
  * checks/description.pm:
    + [SL] show the actual description when it is too short.
  * checks/patch-systems.pm:
    + [NT] Rewrite using index rather than debfiles to analyse
      the package.  A side-effect of that means that Lintian
      can now check patches stored in the upstream part of the
      packages.  (Closes: #563773)
  * checks/po-debconf.pm:
    + [NT] Avoid writing test.pot to the unpacked package.
      (Closes: #699022)

  * collection/*:
    + [NT] Remove all uses of "debfiles" and "control".
  * collection/{doc-base-files,init.d,menu-files}{,.desc}:
    + [NT] Deprecated, will be removed in a future release.
      They will now be now auto-removed at the end of the
      processing if they have been collected previously.

  * data/cruft/non-free-license:
    + [BR] Detect cc-by-nc-sa license.  (Closes:  #749768).

  * debian/dirs:
    + [NT] Stop installing /var/spool/lintian
  * debian/lintian.install:
    + [NT] Install Lintian::Tutorial POD documents into
      /usr/share/perl5.  (Closes: #761930)
  * debian/postinst:
    + [NT] Remove empty Lintian labs in /var/spool/lintian on
      upgrade.
  * debian/postrm:
    + [NT] Remove the "changes" folder when purging the
      Lintian lab in /var/spool/lintian.

  * doc/tutorial/Lintian/Tutorial/WritingChecks.pod:
    + [NT] Mention "safe_qx" as alternative to qx/`` in the
      tutorial.

  * lib/Lintian/Collect{,/*}.pm:
    + [NT] Deprecate the use of "control", "debfiles" and
      "unpacked".  Consumers are recommended to use
      index_resolved_path and control_index_resolved_path
      instead.
    + [NT] Remove all uses of debfiles (both the method and