@@ -1149,9 +1149,8 @@ sub run {
         }
 
         # doxygen map + md5sum
-        if (   $fname =~ m,^usr/share/doc/$ppkg/[^/]+/.+\.md5$,
-            or $fname =~ m,^usr/share/doc/$ppkg/[^/]+/.+\.map$,) {
-            if($info->index($file->dirname.'doxygen.png')) {
+        if (   $fname =~ m,^usr/share/doc/$ppkg/[^/]+/.+\.md5$,) {
+            if ($file->parent_dir->child('doxygen.png')) {
                 tag 'useless-autogenerated-doxygen-file', $file;
             }
         }
